# beam

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  CHANGELOG.md  COMMAND_REGISTRY.md  COMMAND_REGISTRY_PHASE0.md  COMMAND_REGISTRY_PLAN.md  CONTRIBUTING.md  GLASS_SYSTEM_ARCHITECTURE.md  README.md  index.html  knip.json  package.json  plan.md  tsconfig.json  turbo.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release-linux.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/: .gitignore  README.md  astro.config.mjs  package.json  wrangler.jsonc  wrangler.toml
beam-api/: package.json  tsconfig.json
browser-extension/: README.md
browser-extension/chrome/: background.js  manifest.json
browser-extension/firefox/: background.js
docs/extensions/: developer-workflow.md
examples/aur-search/: package.json
extra/extension-boilerplate/: README.md
extra/schemas/: extension.json
infra/aur/: README.md
infra/scripts/: generate-emoji-data.ts  install-snippets-udev-rules.sh  publish-beam-api.ts  publish-beam-utils.ts  publish-store-package.ts  update-aur-beam-bin.ts  update-aur-beam-launcher-bin.ts  utils.ts  validate-store-package.ts
infra/store/: catalog.json
proto/extension-runtime/: README.md  manager.proto  manifest.proto  rpc.proto  store.proto  ui.proto
scripts/: install-snippets-udev-rules.sh  publish-store-package.ts  test-extension-compatibility.mjs  utils.ts  validate-store-package.ts
sidecar/: package.json
sidecar/src/: config.ts  hostConfig.ts  index.ts  io.ts  manifest.ts  plugin.ts  preferences.ts  reconciler.ts  state.ts  types.ts  utils.ts
src/: index.css  main.tsx
src-tauri/: Cargo.toml  ERROR_HANDLING.md  build.rs  tauri.conf.json
src-tauri/SoulverWrapper/Sources/SoulverWrapper/: SoulverWrapper.swift
src-tauri/binaries/: app-x86_64-unknown-linux-gnu  beam-data-control-server-aarch64-unknown-linux-gnu
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_commands.rs  config.rs  error.rs  extensions.rs  launcher_window.rs  lib.rs  menu_bar.rs  settings.rs  state.rs
src-tauri/src/ai/: attachments.rs  config.rs  context.rs  db.rs  helper.rs  key_store.rs  mod.rs  model.rs  repository.rs
src-tauri/src/applications/: app_entry.rs  cache.rs  collector.rs  error.rs  find_app.rs  icon_resolver.rs  mod.rs  open_app.rs  raycast_compat.rs  search.rs
src-tauri/src/calculator/: calculation.rs  error.rs  history.rs  mod.rs  query_normalizer.rs  query_validator.rs  service.rs  settings.rs  soulver.rs  timezone.rs  types.rs
src-tauri/src/calculator/plugin/: city_time.rs  coin.rs  error.rs  mod.rs
src-tauri/src/cli/: bridge.rs  error.rs  mod.rs  parser.rs
src-tauri/src/clipboard/: config.rs  convert_image.rs  error.rs  history.rs  mod.rs  password.rs  search.rs
src-tauri/src/currency/: coin_plugin.rs  helpers.rs  mod.rs  normalizer.rs  runtime.rs  term_matcher.rs
src-tauri/src/custom_config/: commands_items.rs  config.rs  mod.rs
src-tauri/src/dictionary/: commands.rs  config.rs  error.rs  language.rs  mod.rs  model.rs
src-tauri/src/extensions/: ai.rs  browser_extension.rs  config.rs  error.rs  mod.rs  oauth.rs  store.rs
src-tauri/src/extensions/runtime/: bridge.rs  mod.rs
src-tauri/src/file_search/: commands.rs  config.rs  mod.rs  types.rs
src-tauri/src/file_search/indexer/: builder.rs  cache.rs  error.rs  helper.rs  watcher.rs
src-tauri/src/file_search/search/: error.rs  mod.rs
src-tauri/src/fuzzy_search/: error.rs  mod.rs
src-tauri/src/hotkeys/: commands.rs  mod.rs  runtime.rs  shortcuts.rs  store.rs
src-tauri/src/http/: error.rs  mod.rs
src-tauri/src/hyprwhspr/: error.rs  mod.rs
src-tauri/src/integrations/: config.rs  mod.rs
src-tauri/src/integrations/github/: helper.rs  mod.rs  model.rs
src-tauri/src/integrations/spotify/: helper.rs  mod.rs  model.rs
src-tauri/src/launcher_shell/: mod.rs
src-tauri/src/launcher_theme/: config.rs  error.rs  mod.rs
src-tauri/src/linux_desktop/: applications.rs  capabilities.rs  clipboard.rs  context.rs  environment.rs  kde_bridge.rs  mod.rs  selection.rs  status.rs  wayland_helper.rs
src-tauri/src/linux_desktop/gnome_extension/: config.rs  dbus.rs  error.rs  install.rs  mod.rs  status.rs
src-tauri/src/linux_desktop/window_manager/: config.rs  error.rs  fallback.rs  gnome.rs  hyprland.rs  kde.rs  mod.rs  sway.rs  wayland.rs  x11.rs
src-tauri/src/notes/: config.rs  db.rs  mod.rs
src-tauri/src/pinned/: error.rs  mod.rs
src-tauri/src/quicklinks/: error.rs  favicon.rs  helper.rs  mod.rs
src-tauri/src/script_commands/: cache.rs  discovery.rs  error.rs  manage.rs  mod.rs  runner.rs  types.rs
src-tauri/src/search/: error.rs  mod.rs
src-tauri/src/settings/: error.rs
src-tauri/src/snippets/: config.rs  db.rs  error.rs  helpers.rs  mod.rs  model.rs  repository.rs  runtime.rs
src-tauri/src/spotify/: commands.rs  helper.rs  mod.rs
src-tauri/src/state/: config.rs
src-tauri/src/system_actions/: error.rs  mod.rs
src-tauri/src/todo/: config.rs  db.rs  error.rs  helpers.rs  mod.rs  sub_todo.rs  todo.rs
src-tauri/src/translation/: commands.rs  error.rs  helper.rs  mod.rs  model.rs
src-tauri/src/utils/: mod.rs
src-tauri/src/window_switcher/: mod.rs
src-tauri/src/window_switcher/backends/: hyprland.rs  sway.rs
src/command-registry/: candidates.ts  command-preferences.ts  context.ts  default-providers.ts  dispatcher.ts  extension-adapter.ts  fallback-commands.ts  index.ts  matcher.ts  modes.ts  panel-actions-registry.ts  panels.ts  pinned-commands-api.ts  providers.ts  ranked-candidates.ts  ranker.ts  ranking-config.ts  registry.ts  static-candidates.ts  static-commands.ts  static-registry.ts  telemetry.ts  trigger-registry.ts  types.ts  use-command-preferences.ts  validation.ts
src/components/: launcher-command.tsx  loader.tsx  mode-toggle.tsx  theme-provider.tsx  ui-style-provider.tsx
src/lib/: debounce.ts  launcher-items.ts
src/providers/: query-provider.tsx  ui-style-provider.tsx
src/routes/: __root.tsx  index.tsx
store/: catalog.json
(+1110 files in other folders)
