[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]

# Tauri Framework & Plugins
tauri = { version = "2.10.0", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.4.0"

# Serialization & Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.228"

# Calculator & Date/Time
smartcalc = "1.0.8"
jiff = "0.2.20"

# chrono is required for smartcalc compatibility (TokenType::Time)
chrono = "0.4"

localzone = "0.3.1"
once_cell = "1.21.3"

# System & Desktop Integration
freedesktop-file-parser = "0.3.1"
freedesktop-icons = "0.4.0"
walkdir = "2.5.0"
shell-words = "1.1.0"
webbrowser = "1.1.0"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }

# Security & Cryptography
keyring = "3.6.3"
aes-gcm = "0.10.3"
sha2 = "0.10.9"
rand = "0.9.2"
base64 = "0.22.1"

# HTTP & Networking
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
poll-promise = "0.3.0"

# Utilities
log = "0.4"
nucleo = "0.5.0"
image = "0.25.6"
