[package]
name = "beam"
version = "1.0.0"
description = "A Raycast Alternative"
authors = ["codewithkrish12@gmail.com"]
license = ""
repository = "https://github.com/krishkalaria12/beam"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Build Dependencies
[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

# Core Framework
[dependencies]
tauri = { version = "2.10.0", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2.5.0"
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard = "2.1.11"

# Async Runtime & Concurrency
tokio = "1.49.0"
crossbeam-channel = "0.5.15"
parking_lot = "0.12.3"
num_cpus = "1.17.0"
once_cell = "1.21.3"
rayon = "1.10.0"

# Serialization & Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv = { version = "0.7.46", features = ["validation"] }
bytecheck = "0.6.12"
papaya = "0.2.3"

# File System & Search
ignore = "0.4.25"
walkdir = "2.5.0"
notify = { version = "6", features = ["crossbeam-channel"] }
notify-debouncer-mini = "0.7.0"
nucleo = "0.5.0"

# Date & Time
jiff = "0.2.20"
chrono = "0.4"

# System & Desktop Integration
dirs = "6.0.0"
freedesktop-file-parser = "0.3.1"
freedesktop-icons = "0.4.0"
shell-words = "1.1.0"
webbrowser = "1.1.0"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
system_shutdown = "4.1.0"
keepawake = "0.6.0"
sysinfo = "0.29"
hyprland = "0.4.0-beta.3"
swayipc = "4.0.0"

# Security & Cryptography
keyring = { version = "3.6.3", features = [
  "apple-native",
  "windows-native",
  "linux-native-sync-persistent",
] }
aes-gcm = "0.10.3"
sha2 = "0.10.9"
rand = "0.9.2"
base64 = "0.22.1"

# HTTP & Networking
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json"] }
bytes = "1.10.1"
zip = "4.1.0"
url = "2.5.8"
favicon-picker = "1.1.0"
tiny_http = "0.12.0"
futures-util = "0.3.31"

# DB
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
nanoid = "0.4.0"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
log = "0.4"
image = "0.25.6"
open = "5.3.3"
whichlang = "0.1.0"
ashpd = "0.11.0"
scraper = "0.25.0"
rig-core = "0.31.0"
smart-calculator = "1.0.2"
zbus = "5.14.0"
x11rb = "0.13.2"

# Platform-Specific Dependencies
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.4.0"
